data/derived/sp14/progs/unify/prog2315.ml.out
Characters 401-416:
  | SumPercent(e1, e2, e3) -> (eval (e1, x, y) + eval(e2, x, y) 
                               ^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
